# maestro_v2

./: .gitignore  README.md  package-lock.json  package.json  tailwind.config.js  tsconfig.json
.cursor/rules/: project-docs-rules.mdc
document/: project_progress.md  project_requirement_document.md  tech_stack_document.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: app_lib.rs  commands.rs  lib.rs  logger.rs  main.rs
src-tauri/src/tools/: base.rs  bash.rs  computer.rs  edit.rs  mod.rs
src/app/: layout.tsx  page.tsx
src/app/chat/: page.tsx
src/components/: LogViewer.tsx  LogViewerModal.tsx
src/components/layout/: Footer.tsx  Hero.tsx  Navbar.tsx
src/components/ui/: BlockBasedChatMessage.tsx  Button.tsx  Card.tsx  ChatInput.tsx  ChatMessage.tsx  ChatSessionList.tsx  ContentBlockRenderer.tsx  EnhancedChatMessage.tsx  FeatureCard.tsx  MainNavigation.tsx  MobileNavigation.tsx  SettingsPanel.tsx  ToolOutput.tsx
src/lib/: claude-api.ts  claude.ts  utils.ts
src/styles/: globals.css
