[package]
name = "maestro"
version = "0.1.0"
description = "使用Tauri和Rust构建的跨平台桌面应用，通过Claude AI模型控制计算机执行各种任务"
authors = ["Maestro Team"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.3.1", features = [] }
tauri-plugin-log = "2.0.0-rc"
thiserror = "1.0"
tokio = { version = "1.44", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
screenshots = "0.8"
enigo = "0.2"
rusqlite = { version = "0.31", features = ["bundled"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
